...
        android:inputType="text"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:textSize="23dp"
        android:id="@+id/loginUsername"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/signInPassword"
        android:textSize="23dp"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="goToMainMenu"
        android:textSize="25dp"
        android:text="@string/signInButton"
        android:textStyle="bold"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:onClick="goToSignUp"
        android:text="@string/signUpButton"
...
