<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="11dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:nestedScrollingEnabled="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="123dp"
                android:layout_height="116dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/signupwhite" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textColorHint="@color/white"
                android:ems="10"
                android:id="@+id/signupName"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:ems="10"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textColorHint="@color/white"
                android:id="@+id/signupUsername"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/signInPassword"
                android:ems="10"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textColorHint="@color/white"
                android:id="@+id/signupPassword"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="signUp"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/signUpButton"
                android:textAllCaps="false" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>