...
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:onClick="goToCreateMenu"
            app:srcCompat="@drawable/createwhite"></ImageView>

        <ImageView
            android:id="@+id/train_menu"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:onClick="goToTrainMenu"
            app:srcCompat="@drawable/trainwhite"></ImageView>
...
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/track_menu"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:onClick="goToTrackMenu"
            app:srcCompat="@drawable/trackwhite"></ImageView>
...
            android:onClick="goToSettings"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/signOut"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="signOut"
        android:text="@string/signOutButton"
        android:textStyle="bold"
        android:textSize="25dp"
...
