<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/trackmenu"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="181dp"
        android:layout_height="209dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/trackwhite" />

    <TextView
        android:id="@+id/welcomeMsg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="25dp"
        android:text="@string/choosepalace"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/palacechoice"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textSize="25dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/track"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="goToViewPalace"
        android:textSize="25dp"
        android:text="@string/train"
        android:textAllCaps="false" />

</LinearLayout>