<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <TextView
                android:id="@+id/NoteDetailsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoteDetails"
                android:textStyle="bold"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/noteDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/CreateNoteTitle"
                android:focusable="false"
                android:inputType="none" />

            <EditText
                android:id="@+id/noteDetailsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/NotesViewDescription"
                android:focusable="false"
                android:inputType="none" />


            <ImageView
                android:id="@+id/noteImage"
                android:layout_width="307dp"
                android:layout_height="209dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent" />

            <com.estimote.indoorsdk_module.view.IndoorLocationView
                android:id="@+id/indoor_view_note_view"
                android:layout_width="match_parent"
                android:layout_height="236dp" />

            <Button
                android:id="@+id/deleteNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="25dp"
                android:onClick="deleteNote"
                android:text="@string/deleteNote"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>