<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="117dp"
                android:layout_height="115dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:cropToPadding="false"
                app:srcCompat="@drawable/trackpurple" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/palace_details"
                android:textStyle="bold"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/palaceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/viewPalaceTitle"
                android:inputType="none" />

            <EditText
                android:id="@+id/palaceDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/PalaceCreationDescription"
                android:inputType="none" />

            <TextView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/palace_progress"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/counter"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/palace_progress_counter"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:max="100"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:scaleY="8"
                android:layout_height="45dp" />

            <TextView
                android:id="@+id/stillToGo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/unremembered_notes"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/unrememberedNotes"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="true"
                android:layout_height="289dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>